fix cart overflow

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -140,6 +140,8 @@ html{
 	background-color: #fff;
 	transition: all .35s ease-in-out;
 	box-shadow: 0px 1px 2px 1px #e1e1e1;
+	overflow-y: scroll;
+	padding-bottom: 5rem;
 
 }
 
